WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108520
Assertion failure in WebResourceLoadScheduler::remove when loading .webarchives
https://bugs.webkit.org/show_bug.cgi?id=108520
Summary
Assertion failure in WebResourceLoadScheduler::remove when loading .webarchives
Brady Eidson
Reported
2013-01-31 13:54:08 PST
Assertion failure in WebResourceLoadScheduler::remove when loading .webarchives
> 1 com.apple.WebKit2 0x10e86760d WebKit::WebResourceLoadScheduler::remove(WebCore::ResourceLoader*) + 0x1bd (WebResourceLoadScheduler.cpp:150)
2 com.apple.WebCore 0x111e7ce18 WebCore::ResourceLoader::releaseResources() + 0x108 (ResourceLoader.cpp:97) 3 com.apple.WebCore 0x1120d0db4 WebCore::SubresourceLoader::releaseResources() + 0x124 (SubresourceLoader.cpp:325) 4 com.apple.WebCore 0x111e7e019 WebCore::ResourceLoader::didFinishLoading(double) + 0x49 (ResourceLoader.cpp:318) 5 com.apple.WebCore 0x1120d0924 WebCore::SubresourceLoader::didFinishLoading(double) + 0x254 (SubresourceLoader.cpp:277) 6 com.apple.WebCore 0x110d25193 WebCore::DocumentLoader::substituteResourceDeliveryTimerFired(WebCore::Timer<WebCore::DocumentLoader>*) + 0x363 (DocumentLoader.cpp:658) 7 com.apple.WebCore 0x110d33c03 WebCore::Timer<WebCore::DocumentLoader>::fired() + 0x73 (Timer.h:106) 8 com.apple.WebCore 0x11226a62b WebCore::ThreadTimers::sharedTimerFiredInternal() + 0x12b (ThreadTimers.cpp:119) 9 com.apple.WebCore 0x11226a3b9 WebCore::ThreadTimers::sharedTimerFired() + 0x19 (ThreadTimers.cpp:94) 10 com.apple.WebCore 0x111f8a9f3 WebCore::timerFired(__CFRunLoopTimer*, void*) + 0x43 (SharedTimerMac.mm:167) Archive ResourceLoaders - even if they aren't going to be scheduled or loaded remotely - should still be added to the scheduler's loader set, for proper accounting. In radar as <
rdar://problem/12888145
>
Attachments
Patch v1
(2.22 KB, patch)
2013-01-31 14:05 PST
,
Brady Eidson
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2013-01-31 14:05:02 PST
Created
attachment 185858
[details]
Patch v1
Brady Eidson
Comment 2
2013-01-31 15:15:17 PST
http://trac.webkit.org/changeset/141493
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug