Assertion failure in WebResourceLoadScheduler::remove when loading .webarchives <rdar://problem/12888145> and https://bugs.webkit.org/show_bug.cgi?id=108520

Reviewed by Alexey Proskuryakov.

* WebProcess/Network/WebResourceLoadScheduler.cpp:
(WebKit::WebResourceLoadScheduler::scheduleLoad): Even if it isn't to be scheduled with the
  NetworkProcess, still add this ResourceLoader to the scheduler's records.

Canonical link: https://commits.webkit.org/126760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141493 268f45cc-cd09-0410-ab3c-d52691b4dbfc